--- a/components/astrotest/astrotest.astro
+++ b/components/astrotest/astrotest.astro
@@ -14,6 +14,8 @@ const { text } = Astro.props;
 //     </span>
 //   </p>
 // </div>
+
+console.log(import.meta.env.ENV_BOOKSHOP_LIVE);
 ---
 
 <div>
