Try directly logging flag

--- a/components/astrotest/astrotest.astro
+++ b/components/astrotest/astrotest.astro
@@ -15,7 +15,7 @@ const { text } = Astro.props;
 //   </p>
 // </div>
 
-console.log(import.meta.env.ENV_BOOKSHOP_LIVE);
+console.log(ENV_BOOKSHOP_LIVE);
 ---
 
 <div>
