--- a/components/layout/slider/slider.astro
+++ b/components/layout/slider/slider.astro
@@ -7,10 +7,12 @@ export interface Props {
   key?: string;
 }
 
-const envEditor = !(
-  // @ts-expect-error TS2304
-  (typeof ENV_BOOKSHOP_LIVE == "boolean" && !ENV_BOOKSHOP_LIVE)
-);
+const envEditor =
+  true ||
+  !(
+    // @ts-expect-error TS2304
+    (typeof ENV_BOOKSHOP_LIVE == "boolean" && !ENV_BOOKSHOP_LIVE)
+  );
 
 const { key } = Astro.props;
 const id = "glide" + "-" + (key || "");
@@ -39,17 +41,18 @@ const slides = Astro.props.slides || [];
   envEditor ? (
     <section class="slider">
       {slides.map((slide, i) => (
-        <Fragment>
+        <>
           <input
             type="radio"
             id={id + "_" + i}
             name={id}
             checked={i == 0 ? "checked" : undefined}
           />
-        </Fragment>
+          <label for={id + "_" + i}>{i}</label>
+        </>
       ))}
 
-      <div class="glide" data-glide={id} {id}>
+      <div class="glide" {id}>
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             {slides.map((slide, i) => (
@@ -127,15 +130,16 @@ const slides = Astro.props.slides || [];
 
   label {
     background-color: rgb(235, 255, 255);
-    padding: 1rem;
+    padding: 0.5rem 1rem;
+    transition: background-color 0.2s ease-in-out;
 
-    :hover {
-      background-color: rgb(175, 251, 251);
+    &:hover {
+      background-color: rgb(163, 238, 255);
     }
   }
 
   input:checked + label {
-    background-color: rgb(120, 250, 250);
+    background-color: rgb(82, 223, 255);
   }
 </style>
 
