--- a/components/richtext/richtext.astro
+++ b/components/richtext/richtext.astro
@@ -10,3 +10,11 @@ const htmlContent = md.render(Astro.props.content);
 ---
 
 <section set:html={htmlContent} />
+
+<style>
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+</style>
