Add extra info about ENV_BOOKSHOP_LIVE flag

--- a/components/astrotest/astrotest.astro
+++ b/components/astrotest/astrotest.astro
@@ -19,10 +19,16 @@ const envEditor = !(
   // @ts-expect-error TS2304
   (typeof ENV_BOOKSHOP_LIVE == "boolean" && !ENV_BOOKSHOP_LIVE)
 );
+
+// @ts-expect-error TS2304
+const bookshop_flag = ENV_BOOKSHOP_LIVE;
+const typeof_bookshop_flag = typeof bookshop_flag;
 ---
 
 <div>
   <p>Live Editing Status: <span id="astro-test">{String(envEditor)}</span></p>
+  <p>ENV_BOOKSHOP_LIVE: <span>{String(bookshop_flag)}</span></p>
+  <p>typeof ENV_BOOKSHOP_LIVE: <span>{typeof_bookshop_flag}</span></p>
   <p>Test data: <span>{text}</span></p>
 </div>
 
