Fix undefined bookshop flag

--- a/components/astrotest/astrotest.astro
+++ b/components/astrotest/astrotest.astro
@@ -27,8 +27,8 @@ const typeof_bookshop_flag = typeof bookshop_flag;
 
 <div>
   <p>Live Editing Status: <span id="astro-test">{String(envEditor)}</span></p>
-  <p>ENV_BOOKSHOP_LIVE: <span>{String(bookshop_flag)}</span></p>
-  <p>typeof ENV_BOOKSHOP_LIVE: <span>{typeof_bookshop_flag}</span></p>
+  <p>ENV Flag: <span>{String(bookshop_flag)}</span></p>
+  <p>typeof ENV Flag: <span>{typeof_bookshop_flag}</span></p>
   <p>Test data: <span>{text}</span></p>
 </div>
 
