Fix undefined error

--- a/components/astrotest/astrotest.astro
+++ b/components/astrotest/astrotest.astro
@@ -21,13 +21,12 @@ const envEditor = !(
 );
 
 // @ts-expect-error TS2304
-const bookshop_flag = ENV_BOOKSHOP_LIVE;
-const typeof_bookshop_flag = typeof bookshop_flag;
+// const bookshop_flag = ENV_BOOKSHOP_LIVE;
+const typeof_bookshop_flag = typeof ENV_BOOKSHOP_LIVE;
 ---
 
 <div>
   <p>Live Editing Status: <span id="astro-test">{String(envEditor)}</span></p>
-  <p>ENV Flag: <span>{String(bookshop_flag)}</span></p>
   <p>typeof ENV Flag: <span>{typeof_bookshop_flag}</span></p>
   <p>Test data: <span>{text}</span></p>
 </div>
